Cambio Planilla por Ver

--- a/Estacionamiento_TP/index.html
+++ b/Estacionamiento_TP/index.html
@@ -14,9 +14,9 @@
 			<nav>
 				<button type="button" onclick="MostrarLogin()">Login</button>
 				<button type="button" onclick="MostrarIngreso()">Ingresar Automovil</button>
-				<button type="button" onclick="MostrarPlanilla(1)">Planilla Vehiculos</button>
-				<button type="button" onclick="MostrarPlanilla(2)">Planilla Facturacion</button>
-				<button type="button" onclick="MostrarPlanilla(3)">Planilla Usuarios</button>
+				<button type="button" onclick="MostrarPlanilla(1)">Ver Vehiculos</button>
+				<button type="button" onclick="MostrarPlanilla(2)">Ver Facturacion</button>
+				<button type="button" onclick="MostrarPlanilla(3)">Ver Usuarios</button>
 				<ul id="usuario"></ul>
 			</nav>
 		</div>
